--- a/ITFPX4535_PrallDarien_Assessment9_Attempt1.ipynb
+++ b/ITFPX4535_PrallDarien_Assessment9_Attempt1.ipynb
@@ -40,28 +40,385 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###**Task 1.1: Install NLTK**"
+    "###**Task 1.1: Install NLTK**\n",
+    "**What this code is doing:** Importing the NLTK library to allow the download of the gutenberg texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import gutenberg"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###**Task 1.2: Download the Gutenberg Corpus**"
+    "###**Task 1.2: Download the Gutenberg Corpus**\n",
+    "**What this code is doing:** Downloading the gutenberg texts and splitter. Storing all texts to a variable to print what they are"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "austen-emma.txt\n",
+      "austen-persuasion.txt\n",
+      "austen-sense.txt\n",
+      "bible-kjv.txt\n",
+      "blake-poems.txt\n",
+      "bryant-stories.txt\n",
+      "burgess-busterbrown.txt\n",
+      "carroll-alice.txt\n",
+      "chesterton-ball.txt\n",
+      "chesterton-brown.txt\n",
+      "chesterton-thursday.txt\n",
+      "edgeworth-parents.txt\n",
+      "melville-moby_dick.txt\n",
+      "milton-paradise.txt\n",
+      "shakespeare-caesar.txt\n",
+      "shakespeare-hamlet.txt\n",
+      "shakespeare-macbeth.txt\n",
+      "whitman-leaves.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "texts = gutenberg.fileids()\n",
+    "for text in texts:\n",
+    "    print(text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###**Task 1.3: Define Each Modal Group**"
+    "###**Task 1.3: Define Each Modal Group**\n",
+    "**What this code is doing:** Creating a list of modal verbs I wnat to look for within the texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_modals = ['can', 'could', 'may', 'might', 'will', 'would', 'should']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###**Task 1.4: Count Relative Frequencies of Each Modal Verb**"
+    "###**Task 1.4: Count Relative Frequencies of Each Modal Verb**\n",
+    "**What this code is doing:** Creating a dictionary to store the modals and their counts. Then, I need to loop through each file in the gutenberg tests, looking for each modal verb and counting them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: austen-emma.txt\n",
+      "can: 270\n",
+      "\n",
+      "could: 825\n",
+      "\n",
+      "may: 213\n",
+      "\n",
+      "might: 322\n",
+      "\n",
+      "will: 559\n",
+      "\n",
+      "would: 815\n",
+      "\n",
+      "should: 366\n",
+      "\n",
+      "Text: austen-persuasion.txt\n",
+      "can: 100\n",
+      "\n",
+      "could: 444\n",
+      "\n",
+      "may: 87\n",
+      "\n",
+      "might: 166\n",
+      "\n",
+      "will: 162\n",
+      "\n",
+      "would: 351\n",
+      "\n",
+      "should: 185\n",
+      "\n",
+      "Text: austen-sense.txt\n",
+      "can: 206\n",
+      "\n",
+      "could: 568\n",
+      "\n",
+      "may: 169\n",
+      "\n",
+      "might: 215\n",
+      "\n",
+      "will: 354\n",
+      "\n",
+      "would: 507\n",
+      "\n",
+      "should: 228\n",
+      "\n",
+      "Text: bible-kjv.txt\n",
+      "can: 213\n",
+      "\n",
+      "could: 165\n",
+      "\n",
+      "may: 1024\n",
+      "\n",
+      "might: 475\n",
+      "\n",
+      "will: 3807\n",
+      "\n",
+      "would: 443\n",
+      "\n",
+      "should: 768\n",
+      "\n",
+      "Text: blake-poems.txt\n",
+      "can: 20\n",
+      "\n",
+      "could: 3\n",
+      "\n",
+      "may: 5\n",
+      "\n",
+      "might: 2\n",
+      "\n",
+      "will: 3\n",
+      "\n",
+      "would: 3\n",
+      "\n",
+      "should: 6\n",
+      "\n",
+      "Text: bryant-stories.txt\n",
+      "can: 75\n",
+      "\n",
+      "could: 154\n",
+      "\n",
+      "may: 18\n",
+      "\n",
+      "might: 23\n",
+      "\n",
+      "will: 144\n",
+      "\n",
+      "would: 110\n",
+      "\n",
+      "should: 38\n",
+      "\n",
+      "Text: burgess-busterbrown.txt\n",
+      "can: 23\n",
+      "\n",
+      "could: 56\n",
+      "\n",
+      "may: 3\n",
+      "\n",
+      "might: 17\n",
+      "\n",
+      "will: 19\n",
+      "\n",
+      "would: 46\n",
+      "\n",
+      "should: 13\n",
+      "\n",
+      "Text: carroll-alice.txt\n",
+      "can: 57\n",
+      "\n",
+      "could: 73\n",
+      "\n",
+      "may: 11\n",
+      "\n",
+      "might: 28\n",
+      "\n",
+      "will: 24\n",
+      "\n",
+      "would: 70\n",
+      "\n",
+      "should: 27\n",
+      "\n",
+      "Text: chesterton-ball.txt\n",
+      "can: 131\n",
+      "\n",
+      "could: 117\n",
+      "\n",
+      "may: 90\n",
+      "\n",
+      "might: 69\n",
+      "\n",
+      "will: 198\n",
+      "\n",
+      "would: 139\n",
+      "\n",
+      "should: 75\n",
+      "\n",
+      "Text: chesterton-brown.txt\n",
+      "can: 126\n",
+      "\n",
+      "could: 170\n",
+      "\n",
+      "may: 47\n",
+      "\n",
+      "might: 71\n",
+      "\n",
+      "will: 111\n",
+      "\n",
+      "would: 132\n",
+      "\n",
+      "should: 56\n",
+      "\n",
+      "Text: chesterton-thursday.txt\n",
+      "can: 117\n",
+      "\n",
+      "could: 148\n",
+      "\n",
+      "may: 56\n",
+      "\n",
+      "might: 71\n",
+      "\n",
+      "will: 109\n",
+      "\n",
+      "would: 116\n",
+      "\n",
+      "should: 54\n",
+      "\n",
+      "Text: edgeworth-parents.txt\n",
+      "can: 340\n",
+      "\n",
+      "could: 420\n",
+      "\n",
+      "may: 160\n",
+      "\n",
+      "might: 127\n",
+      "\n",
+      "will: 517\n",
+      "\n",
+      "would: 503\n",
+      "\n",
+      "should: 271\n",
+      "\n",
+      "Text: melville-moby_dick.txt\n",
+      "can: 220\n",
+      "\n",
+      "could: 215\n",
+      "\n",
+      "may: 230\n",
+      "\n",
+      "might: 183\n",
+      "\n",
+      "will: 379\n",
+      "\n",
+      "would: 421\n",
+      "\n",
+      "should: 181\n",
+      "\n",
+      "Text: milton-paradise.txt\n",
+      "can: 107\n",
+      "\n",
+      "could: 62\n",
+      "\n",
+      "may: 116\n",
+      "\n",
+      "might: 98\n",
+      "\n",
+      "will: 161\n",
+      "\n",
+      "would: 49\n",
+      "\n",
+      "should: 55\n",
+      "\n",
+      "Text: shakespeare-caesar.txt\n",
+      "can: 16\n",
+      "\n",
+      "could: 18\n",
+      "\n",
+      "may: 35\n",
+      "\n",
+      "might: 12\n",
+      "\n",
+      "will: 129\n",
+      "\n",
+      "would: 40\n",
+      "\n",
+      "should: 38\n",
+      "\n",
+      "Text: shakespeare-hamlet.txt\n",
+      "can: 33\n",
+      "\n",
+      "could: 26\n",
+      "\n",
+      "may: 56\n",
+      "\n",
+      "might: 28\n",
+      "\n",
+      "will: 131\n",
+      "\n",
+      "would: 60\n",
+      "\n",
+      "should: 52\n",
+      "\n",
+      "Text: shakespeare-macbeth.txt\n",
+      "can: 21\n",
+      "\n",
+      "could: 15\n",
+      "\n",
+      "may: 30\n",
+      "\n",
+      "might: 5\n",
+      "\n",
+      "will: 62\n",
+      "\n",
+      "would: 42\n",
+      "\n",
+      "should: 41\n",
+      "\n",
+      "Text: whitman-leaves.txt\n",
+      "can: 88\n",
+      "\n",
+      "could: 49\n",
+      "\n",
+      "may: 85\n",
+      "\n",
+      "might: 26\n",
+      "\n",
+      "will: 261\n",
+      "\n",
+      "would: 85\n",
+      "\n",
+      "should: 42\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "frequency_of_modals = {}\n",
+    "for text in texts:\n",
+    "    words = gutenberg.words(text)\n",
+    "    #print(words)\n",
+    "    count_modal = {}\n",
+    "    for modal in list_of_modals:\n",
+    "        count_modal[modal] = words.count(modal)\n",
+    "    frequency_of_modals[text] = count_modal\n",
+    "\n",
+    "for text, counts in frequency_of_modals.items():\n",
+    "    print(f\"Text: {text}\")\n",
+    "    for modal, count in counts.items():\n",
+    "        print(f\"{modal}: {count}\\n\")"
    ]
   },
   {
@@ -115,8 +472,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
